--- a/client/lib/import/stylesheets/style.css
+++ b/client/lib/import/stylesheets/style.css
@@ -369,10 +369,11 @@ body{
 }
 .my-prize-list .qrcode-square{
   text-align: center;
+  /*border: 2px solid white;*/
 }
-.my-prize-list .qrcode-square img{
+.my-prize-list .qrcode-square canvas{
   width: 8rem;
-  border: 2px solid white;
+  border: 4px solid white;
 }
 .my-prize-list .qrcode-modal .actions{
   text-align: center;
