完善「我的奖品」页面功能： - 如果奖券已过期会显示过期状态； - 已过期或已兑换的奖券不显示兑换二维码；

--- a/client/lib/import/stylesheets/style.css
+++ b/client/lib/import/stylesheets/style.css
@@ -322,6 +322,8 @@ body{
   -o-filter: grayscale(100%);
   filter: grayscale(100%);
   filter: gray;
+
+  pointer-events: none;
 }
 .my-prize-list .prize.used .head{
   color: #B3B3B4 !important;
