1、优化各页面图片大小； 2、添加手机晃动事件的接收； 3、优化奶瓶晃动的动画效果；

--- a/client/lib/import/stylesheets/style.css
+++ b/client/lib/import/stylesheets/style.css
@@ -96,9 +96,10 @@ body{
 
 .shake{
   -webkit-animation-name:shake;
-  -webkit-animation-duration:0.8s;
+  /*-webkit-animation-duration:0.8s;*/
   -moz--name:shake;
-  -moz-animation-duration:0.8s;
+  /*-moz-animation-duration:0.8s;*/
+  -webkit-animation:shake 1s infinite linear ;
 }
 
 .shake-bottle .actions{
