完善晃动奶瓶时的声音持续性。

--- a/client/lib/import/stylesheets/style.css
+++ b/client/lib/import/stylesheets/style.css
@@ -68,6 +68,7 @@ body{
   -webkit-justify-content: flex-end;
   position: relative;
   align-items: flex-end;
+  -webkit-align-items: flex-end;
   margin-right: 2.75rem;
 }
 .shake-bottle .thermometer img{
