测试中被注释掉的代码段取消注释

--- a/client/lib/import/stylesheets/style.css
+++ b/client/lib/import/stylesheets/style.css
@@ -307,6 +307,10 @@ body{
   width: 4.2rem;
   height: auto;
 }
+#shake-result-modal .column{
+  align-items: center;
+  -webkit-align-items: center;
+}
 
 /*我的奖品列表界面样式*/
 .prize-list:focus{
