提高晃动检测频率； 排名页面中的虚线位置调整；

--- a/client/lib/import/stylesheets/style.css
+++ b/client/lib/import/stylesheets/style.css
@@ -147,6 +147,9 @@ body{
 .rank .vertical-divider{
   /*justify-content: center;*/
   border-right: 1px dashed white;
+
+  margin-top: .6rem;
+  height: 8.2rem;
 }
 /*.rank .vertical-divider .line{*/
   /*border-right: 1px dashed white;*/
